[package]
name = "stream-mid-tee-proxy"
version = "0.1.1"
edition = "2024"
license = "无"
description = "小工具,观察tcp流量"
authors = ["windqyoung"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
jiff = "0.2.16"
rustls = { version = "0.23.35" }
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"


[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/stream-mid-tee-proxy", dest = "/usr/bin/stream-mid-tee-proxy", mode = "755" },
]
